2.7.4 (15-03-2021)
- Improvement: Update ISEG Theme (@brand-primary: #e02020; @body-bg: #fbe8e8)

2.7.3 (14-03-2021)
- Improvement: Update ISEG Theme (#fce8e8)

2.7.2 (14-03-2021)
- Improvement: Update ISEG Theme

2.7.1 (14-03-2021)
2.7.0 (22-02-2021)
- New feature: Allowing language change in login page
- Improvement: Changed presentation of third party logins

2.6.3 (15-12-2020)
2.6.2 (24-11-2020)
- Improvement: Support to check that a certain provider should always be used

2.6.1 (07-10-2020)
- Improvement: Redirecting always to startPage

2.6.0 (01-07-2020)
- New feature: Execution course management layout, without hard-coded functionalities

2.5.0 (08-05-2020)
- Refactor: Changing place where support property is checked

2.4.0 (04-05-2020)
- Improvement: Add login path as parameter

2.3.7 (27-04-2020)
- Bug fix: Fix reload bug in locale change request

2.3.6 (24-04-2020)
- Bug fix: Fix context path on locale change request

2.3.5 (24-04-2020)
- Bug fix: Fixes locale change on uilayer screens

2.3.4 (14-11-2019)
2.3.3 (05-11-2019)
2.3.2 (31-10-2019)
- Improvement: added release notes file