@@ -1,3 +1,5 @@
+- Refactor: Refactored login callback so it doesn't skip post login redirectors
+
 2.7.4 (15-03-2021)
 - Improvement: Update ISEG Theme (@brand-primary: #e02020; @body-bg: #fbe8e8)
 
